Added: Price Sort APIs for Book collection with their swagger.
