# src/routes/index.js
@@ -2,7 +2,14 @@ import express from 'express';
 const router = express.Router();
 
 import userRoute from './user.route';
-import { bookRouter, ascendingOrderRouter, descendingOrderRouter, alphabeticalOrderRouter } from './book.route';
+import {
+  bookRouter,
+  ascendingOrderRouter,
+  descendingOrderRouter,
+  alphabeticalOrderRouter,
+  bookPriceAscendSortRouter,
+  bookPriceDescendSortRouter
+} from './book.route';
 import cartRoute from './cart.route';
 import searchRoute from './search.route';
 import wishlistRoute from './wishlist.route';
@@ -20,6 +27,8 @@ const routes = () => {
   router.use('/ascending', ascendingOrderRouter);
   router.use('/descending', descendingOrderRouter);
   router.use('/alphabetical', alphabeticalOrderRouter);
+  router.use('/priceLowToHigh', bookPriceAscendSortRouter);
+  router.use('/priceHighToLow', bookPriceDescendSortRouter);
   router.use('/cart', cartRoute);
   router.use('/search', searchRoute);
   router.use('/wishlist', wishlistRoute);
